# zed-navigator-lsp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  extension.toml
.github/workflows/: release.yml
src/: lib.rs
