# Standalone package — NOT a member of the Neon Law Navigator workspace. Zed
# compiles a dev extension by running `cargo` inside this directory; an
# empty `[workspace]` table stops Cargo from walking up to the
# repo-root `Cargo.toml` and failing with "believes it's in a workspace
# when it's not." This is the seam that lets the extension build under
# Zed's own toolchain (wasm32-wasip2) independent of the workspace.
[workspace]

[package]
name = "zed_navigator_lsp"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1"
